Major button bug fixes on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -107,17 +107,13 @@ nav .time {
 .to-do-list .completed-list li .trash-button {
     grid-row: 1 / 3;
     font-size: 24px;
+    padding-bottom: 2px;
 }
 .to-do-list .task-list li .delete-button {
     grid-column-start: 2;
-    padding-bottom: 8px;
 }
 .to-do-list .task-list li .move-button {
     grid-column-start: 3;
-}
-.to-do-list .completed-list li .return-button,
-.to-do-list .completed-list li .trash-button {
-    padding-bottom: 4px;
 }
 
 .to-do-list .task-list h3,
@@ -148,6 +144,17 @@ footer {
     .to-do-list .task-list,
     .to-do-list .completed-list {
         width: 280px;
+    }
+    .to-do-list .task-list li .delete-button,
+    .to-do-list .completed-list li button {
+        width: 48px;
+        padding-bottom: 2px;
+        font-size: 18px;
+    }
+    .to-do-list .task-list button,
+    .to-do-list .completed-list button {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 @media (max-width: 400px) {
